# sdmProj

./: CMakeCache.txt  CMakeLists.txt  EHR.HTML  Makefile  Patient.cpp  PatientViewData.cpp  PatientViewData.js  PatientViewData.wasm  a.out  cmake_install.cmake  main.cpp  test.cpp  test2.cpp  testing.sh  wasm.sh
connector/lib64/: a.out
cpp-web-execution/: PatientData  index.html  server.js
include/: Concepts.hpp  DataBase.hpp  Doctor.hpp  DoctorDB.hpp  HealthIssue.hpp  HealthServicies.hpp  MainSystem.hpp  MedicalEncounter.hpp  Patient.hpp  UI.hpp
source/: DataBase.cpp  Doctor.cpp  DoctorDB.cpp  HealthIssue.cpp  HealthServicies.cpp  MainSystem.cpp  MedicalEncounter.cpp  Patient.cpp  UI.cpp
